--- a/docs/api/migration-guides/index.mdx
+++ b/docs/api/migration-guides/index.mdx
@@ -14,8 +14,11 @@ These migration guides help you more effectively use Qiskit and Qiskit Runtime:
 * [Migrate to the Qiskit Runtime V2 primitives](/api/migration-guides/v2-primitives)
 * Migrate to Qiskit Runtime
    * [How to migrate](./qiskit-runtime)
+   * [Migrate from `qiskit-ibmq-provider`](./qiskit-runtime-from-ibmq-provider)
+   * [Migrate from `qiskit_ibm_provider`](./qiskit-runtime-from-ibm-provider)
+   * [Migrate `backend.run` options to primitives](./qiskit-runtime-options)
+   * [Common use cases](./qiskit-runtime-use-case)
    * [Examples](./qiskit-runtime-examples)
-   * [Migrate `backend.run()` from `qiskit_ibm_provider` to `qiskit_ibm_runtime`](./qiskit-runtime-from-provider)
 * [Migrate from cloud simulators to local simulators](/api/migration-guides/local-simulators)
 * Qiskit 0.44 changes
    * [`qiskit.algorithms` new interface](./qiskit-algorithms-module)
