--- a/docs/build-new/circuit-visualization.ipynb
+++ b/docs/build-new/circuit-visualization.ipynb
@@ -129,7 +129,7 @@
     "A text output is useful for quickly seeing the output while developing a circuit, but it doesn't provide the most flexibility. There are two alternative output renderers for the quantum circuit. One uses [Matplotlib](https://matplotlib.org/) and the other uses [LaTeX](https://www.latex-project.org/). The LaTeX renderer requires the [qcircuit package](https://github.com/CQuIC/qcircuit). Select these renderers by setting the \"output\" argument to the strings `mpl` and `latex`.\n",
     "\n",
     "<Admonition type=\"tip\">\n",
-    "  OSX users can get the required LaTeX packages through the [mactex package](https://www.tug.org/mactex/)\n",
+    "  OSX users can get the required LaTeX packages through the [mactex package](https://www.tug.org/mactex/).\n",
     "</Admonition>"
    ]
   },
@@ -460,6 +460,7 @@
   }
  ],
  "metadata": {
+  "description": "Create visualizations of circuits and plot job data using the Qiskit visualization module ",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -477,8 +478,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Visualize circuits",
-  "description": "Create visualizations of circuits and plot job data using the Qiskit visualization module "
+  "title": "Visualize circuits"
  },
  "nbformat": 4,
  "nbformat_minor": 4
