--- a/docs/transpile/representing_quantum_computers.ipynb
+++ b/docs/transpile/representing_quantum_computers.ipynb
@@ -7,10 +7,10 @@
    "source": [
     "# Representing quantum computers for the transpiler\n",
     "\n",
-    "This page overviews how the constraints of a `backend` are represented and what the transpiler does with that information. In order to construct an optimized circuit that can run on a specific system, the transpiler needs certain details about the system.  This information is found in two places: the `backend` object you plan to submit jobs to, and the backend's `Target` attribute.\n",
+    "This page overviews how the constraints of a backend are represented and what the transpiler does with that information. In order to construct an optimized circuit that can run on a specific system, the transpiler needs certain details about the system.  This information is found in two places: the `BackendV2` (or legacy `BackendV1`) object you plan to submit jobs to, and the backend's `Target` attribute.\n",
     "\n",
     "- The [`Target`](../api/qiskit/qiskit.transpiler.Target) contains all the relevant constraints of a device, such as its native basis gates, qubit connectivity, and pulse or timing information.\n",
-    "- The [`Backend`](../api/qiskit/qiskit.providers.BackendV2) typically possesses a `Target` by default and contains additional information, such as the most recently calibrated error rates or the [`InstructionScheduleMap`](../api/qiskit/qiskit.pulse.InstructionScheduleMap).\n",
+    "- The [`Backend`](../api/qiskit/qiskit.providers.BackendV2) possesses a `Target` by default, contains additional information -- such as the [`InstructionScheduleMap`](../api/qiskit/qiskit.pulse.InstructionScheduleMap), and provides the interface for submitting quantum circuit jobs.\n",
     "\n",
     "\n",
     "The precision with which the transpiler produces the most appropriate circuit for specific hardware depends on how much information the `Target` or `Backend` has about its constraints.\n",
@@ -22,7 +22,7 @@
     "<span id=\"default-config\"></span>\n",
     "## Default configuration\n",
     "\n",
-    "The simplest use of the transpiler is to provide all the system information by providing the `backend` or `target`. To better understand how the transpiler works, construct a circuit and transpile it with different information, as follows.\n",
+    "The simplest use of the transpiler is to provide all the system information by providing the `Backend` or `Target`. To better understand how the transpiler works, construct a circuit and transpile it with different information, as follows.\n",
     "\n",
     "Import the necessary libraries and instantiate the system or simulator:"
    ]
@@ -80,7 +80,7 @@
    "source": [
     "### Transpile the circuit to `backend` target\n",
     "\n",
-    "This example uses the default `optimization_level=1` to transpile to the `backend`'s `target`, which providers all the information to the transpiler that is necessary to convert circuit to one that will run on the system.  (Note that if a `target` is specified in the `transpile` function, this will override the target from the `backend`.)"
+    "This example uses the default `optimization_level=1` to transpile to the `backend`'s `target`, which provides all the information needed to convert the circuit to one that will run on the system.  (Note that if a `target` is specified in the `transpile` function, this will override the target from the `backend`.)"
    ]
   },
   {
@@ -111,9 +111,7 @@
    "id": "2ad3848d",
    "metadata": {},
    "source": [
-    "This example is used in later sections of this topic to illustrate that the coupling map and basis gates are the essential pieces of information to pass to the transpiler for optimal circuit construction. The system can usually select default settings for other information that is not passed in, such as timing and scheduling.\n",
-    "\n",
-    "Providing the `backend` properties, including the gates' error rates, allows the transpiler to select the best set of qubits on the system."
+    "This example is used in later sections of this topic to illustrate that the coupling map and basis gates are the essential pieces of information to pass to the transpiler for optimal circuit construction. The system can usually select default settings for other information that is not passed in, such as timing and scheduling."
    ]
   },
   {
@@ -128,7 +126,7 @@
     "The qubits from our abstract circuits are called _virtual qubits_ and those on the coupling map are _physical qubits_. The transpiler provides a mapping between virtual and physical qubits. One of the first steps in transpilation, the _routing_ stage, performs this mapping.\n",
     "\n",
     "<Admonition type=\"note\">\n",
-    "Although the routing stage is intertwined with the _layout_ stage -- which selects the actual qubits -- by default, we will consider them as separate stages for simplicity. The combination of routing and layout is called _qubit mapping_.  Learn more about these stages in the [Transpiler stages](transpiler-stages) topic.\n",
+    "Although the routing stage is intertwined with the _layout_ stage — which selects the actual qubits — by default, we will consider them as separate stages for simplicity. The combination of routing and layout is called _qubit mapping_.  Learn more about these stages in the [Transpiler stages](transpiler-stages) topic.\n",
     "</Admonition>\n",
     "\n",
     "Pass the `coupling_map` keyword argument to see its effect on the transpiler:"
@@ -370,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.7"
   },
   "title": "Represent quantum computers"
  },
