--- a/docs/api/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-examples.mdx
@@ -54,37 +54,45 @@ result = backend.run(expectation_circuits)
   </TabItem>
 </Tabs>
 
-**Primitives model:** Access real systems and remote simulators through the `qiskit-ibm-runtime` **primitives** (`Sampler` and `Estimator`). To run **local** simulations, you can import specific local primitives from `qiskit_aer.primitives` and `qiskit.primitives`. All of them follow the `BaseSampler` and `BaseEstimator` interfaces, but **only the Runtime primitives offer access to the Runtime service, sessions, and built-in error mitigation**.
+**Primitives model:** Access real systems and remote simulators through the `qiskit-ibm-runtime` **primitives** (`Sampler` and `Estimator`). Use **Local testing mode** to run local simulations on Qiskit Runtime fake backends or Aer simulators. The following examples assume you have defined circuits `isa_circuits` and observables `isa_observables`.
 
 <Tabs>
-  <TabItem value="provider" label="Runtime Estimator">
+  <TabItem value="hw" label="Quantum systems">
 ``` python
-from qiskit_ibm_runtime import QiskitRuntimeService, Estimator
+from qiskit_ibm_runtime import EstimatorV2 as Estimator, QiskitRuntimeService
 
-# Define service
+# Define the service.  This allows you to access IBM Quantum systems.
 service = QiskitRuntimeService()
 
-# Get backend
-backend = service.backend("ibmq_qasm_simulator") # cloud simulator
+# Get a backend
+backend = service.least_busy(operational=True, simulator=False)
 
 # Define Estimator  
-# (see tutorials for more information about sessions)
-estimator = Estimator(session=backend)
+estimator = Estimator(backend)
 
-# Run Expectation value calculation
-result = estimator.run(circuits, observables).result()
+# Run an expectation value calculation
+job = estimator.run([(isa_circuits, isa_observables)])
+result = job.result()
 ```
   </TabItem>
 
-  <TabItem value="aer" label="qiskit-aer">
+  <TabItem value="local" label="Local testing mode">
 ``` python
-from qiskit_aer import Estimator
+from qiskit_ibm_runtime import EstimatorV2 as Estimator
+from qiskit_ibm_runtime.fake_provider import FakeManilaV2
 
-# Get local simulator Estimator
-estimator = Estimator()
+# Run the sampler job locally using FakeManilaV2
+fake_manila = FakeManilaV2()
 
-# Run expectation value calculation
-result = estimator.run(circuits, observables).result()
+# You can use a fixed seed to get fixed results. 
+options = {"simulator": {"seed_simulator": 42}}
+
+# Define Estimator  
+estimator = Estimator(backend=fake_manila, options=options)
+
+# Run an expectation value calculation
+job = estimator.run([(isa_circuits, isa_observables)])
+result = job.result()
 ```
   </TabItem>
 </Tabs>
@@ -101,6 +109,10 @@ following migration example shows how to replace the (`qiskit.opflow` & `backend
 We want to compute the expectation value of a quantum state (circuit)
 with respect to a certain operator. In this example, we are using the H2
 molecule and an arbitrary circuit as the quantum state:
+
+<Tabs>
+  <TabItem value="PrimV2" label="Runtimee Estimator">
+For Qiskit Runtime, circuits and parameters must obey the Instruction Set Architecture (ISA) of a particular backend.
 
 ``` python
 from qiskit import QuantumCircuit
@@ -121,10 +133,49 @@ op = SparsePauliOp.from_list(
 state = QuantumCircuit(2)
 state.x(0)
 state.x(1)
+
+# Define the backend
+from qiskit_ibm_runtime import QiskitRuntimeService
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
+
+# Convert inputs to ISA
+from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+
+pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
+isa_state = pm.run(state)
+isa_observables = [operator.apply_layout(isa_state.layout) for operator in op]
+
 ```
+  </TabItem>
+
+  <TabItem value="PrimV1" label="backend.run">
+``` python
+from qiskit import QuantumCircuit
+from qiskit.quantum_info import SparsePauliOp
+
+# Step 1: Define operator
+op = SparsePauliOp.from_list(
+    [
+        ("II", -1.052373245772859),
+        ("IZ", 0.39793742484318045),
+        ("ZI", -0.39793742484318045),
+        ("ZZ", -0.01128010425623538),
+        ("XX", 0.18093119978423156),
+    ]
+)
+
+# Step 2: Define quantum state
+state = QuantumCircuit(2)
+state.x(0)
+state.x(1)
+```
+  </TabItem>
+</Tabs>
+
 
 <span id="legacy-opflow"></span>
-##### 1.a. Legacy: Convert problem to opflow
+##### 1.a. Legacy only: Convert problem to opflow
 
 `qiskit.opflow` provided its own classes to represent both operators
 and quantum states, so the problem defined above would be wrapped as:
@@ -136,56 +187,38 @@ opflow_op = PauliSumOp(op)
 opflow_state = CircuitStateFn(state)
 ```
 
-This step is no longer necessary when using the primitives.
+This step is not necessary when using the primitives.
 
 <Admonition type="note">
     For instructions to migrate from `qiskit.opflow`, see the [Opflow migration guide](./qiskit-opflow-module).
 </Admonition>
 
-#### 2. Calculate expectation values on real device or cloud simulator
+#### 2. Calculate expectation values
 
 <Tabs>
   <TabItem value="updated" label="Runtime Estimator">
 Estimator simplifies the user-side syntax, making it a more
 convenient tool for algorithm design.
 
-<Admonition type="note">
-    Replace `ibmq_qasm_simulator` with your device name to see the complete workflow for a real device.
-</Admonition>
-
 ``` python
-from qiskit_ibm_runtime import QiskitRuntimeService, Estimator
+from qiskit_ibm_runtime import EstimatorV2 as Estimator
 
-service = QiskitRuntimeService()
-backend = service.backend("ibmq_qasm_simulator")
+estimator = Estimator(backend, options={"default_shots": int(1e4)})
+job = estimator.run([(isa_state, isa_observables)])
 
-estimator = Estimator(session=backend)
-
-expectation_value = estimator.run(state, op).result().values
+# Get results for the first (and only) PUB
+pub_result = job.result()[0]
 ```
 
 Note that the Estimator returns a list of values, as it can perform batched evaluations.
 
 ``` python
->>> print("expectation: ", expectation_value)
-expectation:  [-1.06329149]
+>>> print(f">>> Expectation values: {pub_result.data.evs}")
+>>> Expectation values: [-1.05237325 -0.20984981  0.37345495 -0.00564005 -0.00141352]
 ```
-
-The `Estimator` Runtime primitive offers a series of features and tuning
-options that do not have a legacy alternative to migrate from, but can
-help improve your performance and results. For more information, refer
-to the following:
-
--   [Setting execution options
-    topic](../../run/advanced-runtime-options)
--   [Primitive execution options API
-    reference](../qiskit-ibm-runtime/qiskit_ibm_runtime.options.Options)
--   [How to run a session
-    topic](../../run/run-jobs-in-session)
-
   </TabItem>
 
-  <TabItem value="legacy" label="opflow & backend.run()">
+  <TabItem value="legacy" label="backend.run()">
 The legacy workflow required many steps to compute an expectation value:
 
 <Admonition type="note">
@@ -228,10 +261,77 @@ algorithm locally. Let's assume that we want to solve
 the problem defined above with a local state vector simulation.
 
 <Tabs>
-  <TabItem value="updated" label="Local testing mode">
-Qiskit Runtime has a local testing mode that gives you access to 
+  <TabItem value="updated" label="Qiskit Runtime Local testing mode">
+To use local testing mode, specify one of the fake backends from ``qiskit_ibm_runtime.fake_provider`` or specify a Qiskit Aer backend when instantiating a primitive or a session. 
+
+- **Fake backends**: The [fake backends](../qiskit-ibm-runtime/fake_provider)  in ``qiskit_ibm_runtime.fake_provider`` mimic the behaviors of IBM Quantum&trade; systems by using system snapshots. The system snapshots contain important information about the quantum system, such as the coupling map, basis gates, and qubit properties, which are useful for testing the transpiler and performing noisy simulations of the system. The noise model from the snapshot is automatically applied during simulation. 
+- **Aer simulator**: Simulators from [Qiskit Aer](../../verify/simulate-with-qiskit-aer) provide higher-performance simulation that can handle larger circuits and [custom noise models](../../verify/building_noise_models). It also supports Clifford simulation mode, which can efficiently simulate Clifford circuits with a large number of qubits.
+
+The only part of the previous example that we need to change is the backend definition.  The rest of the code is identical.  However, some options and execution modes are ignored when using local testing mode and will generate warnings if included.  
+
+``` python
+from qiskit import QuantumCircuit
+from qiskit.quantum_info import SparsePauliOp
+
+# Step 1: Define operator
+op = SparsePauliOp.from_list(
+    [
+        ("II", -1.052373245772859),
+        ("IZ", 0.39793742484318045),
+        ("ZI", -0.39793742484318045),
+        ("ZZ", -0.01128010425623538),
+        ("XX", 0.18093119978423156),
+    ]
+)
+
+# Step 2: Define quantum state
+state = QuantumCircuit(2)
+state.x(0)
+state.x(1)
+
+# Define a local backend
+from qiskit_ibm_runtime.fake_provider import FakeManilaV2
+backend = FakeManilaV2()
+
+# You could use an Aer simulator instead by using the following code:
+# from qiskit_aer import AerSimulator
+# backend = AerSimulator()
+
+# We don't need these lines when running in local testing mode:
+# from qiskit_ibm_runtime import QiskitRuntimeService
+# service = QiskitRuntimeService()
 
 
+# Convert inputs to ISA
+from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+
+pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
+isa_state = pm.run(state)
+isa_observables = [operator.apply_layout(isa_state.layout) for operator in op]
+```
+  </TabItem>
+
+  <TabItem value="PrimV1" label="backend.run">
+``` python
+from qiskit import QuantumCircuit
+from qiskit.quantum_info import SparsePauliOp
+
+# Step 1: Define operator
+op = SparsePauliOp.from_list(
+    [
+        ("II", -1.052373245772859),
+        ("IZ", 0.39793742484318045),
+        ("ZI", -0.39793742484318045),
+        ("ZZ", -0.01128010425623538),
+        ("XX", 0.18093119978423156),
+    ]
+)
+
+# Step 2: Define quantum state
+state = QuantumCircuit(2)
+state.x(0)
+state.x(1)
+```
   </TabItem>
   <TabItem value="legacy-aer" label="Qiskit Aer simulator">
 ``` python
@@ -673,3 +773,19 @@ binary_quasi_dist:  {'0001': 0.2802734375, '0010': 0.2412109375, '0000': 0.23925
 ```
 
 For more information, see [Noisy simulators in Qiskit Runtime](../../verify/using-ibm-quantum-simulators).
+
+## Next steps
+The Runtime primitives offer a series of features and tuning
+options, some of which do not have a legacy alternative to migrate from, but can
+help improve your performance and results. For more information, refer
+to the following:
+
+<Admonition type="tip" title="Recommendations">
+- [Common use cases](qiskit-runtime-use-case)
+- [Migrate `backend.run` options to primitive options](qiskit-runtime-options)
+- [Setting execution options topic](../../run/advanced-runtime-options)
+- [Primitive execution options API reference](../qiskit-ibm-runtime/qiskit_ibm_runtime.options.Options)
+- [How to run a session topic](../../run/run-jobs-in-session)
+- [Qiskit Runtime local testing mode topic](../../verify/local-testing-mode)
+</Admonition>
+
