--- a/docs/api/migration-guides/qiskit-runtime-options.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-options.mdx
@@ -17,7 +17,7 @@ All `backend.run` options are now available through the Qiskit Runtime primitive
 | job_tags            | options.environment.job_tags                                                                                          |                                                                                                                                      |
 | experiment_id       | N/A: Use job_tags instead.                                                                                            | ibmq-provider only                                                                                                                   |
 | header              | You can attach metadata to circuits. The same metadata is returned in the result metadata, under “circuit_metadata”.  |                                                                                                                                      |
-| shots               | run([(…, shots)]) or run(…, shots=) or options.default_shots                                                          | default_shots is availble only with SamplerV2                                                                                        |
+| shots               | run([(…, shots)]) or run(…, shots=) or options.default_shots                                                          | default_shots is available only with SamplerV2                                                                                       |
 | memory              | Use result.data.meas.get_counts() to get counts and result.data.meas.get_bitstrings() to get per-shot measurements    | SamplerV2 is essentially always memory=True                                                                                          |
 | qubit_lo_freq       | N/A: This option only applies to `Schedule` inputs, which was deprecated in 2022.                                     |                                                                                                                                      |
 | meas_lo_freq        | N/A: This option only applies to `Schedule` inputs, which was deprecated in 2022.                                     |                                                                                                                                      |
